@@ -1,3 +1,7 @@
+2009-04-20  Sanel <karijes@users.sourceforge.net>
+
+	* src/StrUtil.cpp: some valgrind warning fixup
+
 2009-04-18  Sanel <karijes@users.sourceforge.net>
 
 	* m4/pkg.m4: removed obsolete line
